fixes and changes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,8 +12,8 @@
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Xcrypt">
-    <meta property="og:url" content="https://.spheron.app/">
-    <meta property="og:image" content="https://.spheron.app/xcrypt.png">
+    <meta property="og:url" content="http://xcrypt-61dc85.spheron.app/">
+    <meta property="og:image" content="http://xcrypt-61dc85.spheron.app/xcrypt.png">
     <meta property="og:description" content="Anonymous & simple transfers on XDC Blockchain">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
