changes and fixes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Anonymous & simple transfers on XDC Blockchain"
+      content="Anonymous & simple transfers on BNB Blockchain"
     />
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Xcrypt">
     <meta property="og:url" content="http://xcrypt-61dc85.spheron.app/">
     <meta property="og:image" content="http://xcrypt-61dc85.spheron.app/xcrypt.png">
-    <meta property="og:description" content="Anonymous & simple transfers on XDC Blockchain">
+    <meta property="og:description" content="Anonymous & simple transfers on BNB Blockchain">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
     <!--
